--- a/index.html
+++ b/index.html
@@ -174,7 +174,106 @@
 					</div>
 				</section>
 			</main>
-			<footer class="footer"></footer>
+			<footer class="footer">
+				<div class="footer__container">
+					<div class="footer__menu">
+						<h3 class="footer__title">OBE Builders</h3>
+						<nav class="footer__nav menu-footer">
+							<div class="menu-footer__body">
+								<ul class="menu-footer__list">
+									<li class="menu-footer__item">
+										<a href="#Home" class="menu-footer__link">HOME</a>
+									</li>
+									<li class="menu-footer__item">
+										<a href="#Home" class="menu-footer__link">CHI SIAMO</a>
+									</li>
+									<li class="menu-footer__item">
+										<a href="./servici.html" class="menu-footer__link"
+											>SERVIZI</a
+										>
+									</li>
+									<li class="menu-footer__item">
+										<a href="#Home" class="menu-footer__link">SOSTENIBILITA'</a>
+									</li>
+									<li class="menu-footer__item">
+										<a href="#Home" class="menu-footer__link">CONTATTACI</a>
+									</li>
+								</ul>
+							</div>
+						</nav>
+					</div>
+					<div class="footer__contacts contacts-footer">
+						<ul class="contacts-footer__socials socials-contacts">
+							<li class="social-contacts__item">
+								<a href="" class="social-contacts__link">
+									<svg class="social-icon" height="34" width="34">
+										<use
+											href="./img/icons/symbol-defs.svg#icon-instagram"
+										></use>
+									</svg>
+								</a>
+							</li>
+							<li class="social-contacts__item">
+								<a href="" class="social-contacts__link">
+									<svg class="social-icon" height="34" width="34">
+										<use href="./img/icons/symbol-defs.svg#icon-facebook"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="social-contacts__item">
+								<a href="" class="social-contacts__link">
+									<svg class="social-icon" height="34" width="34">
+										<use href="./img/icons/symbol-defs.svg#icon-x"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="social-contacts__item">
+								<a href="" class="social-contacts__link">
+									<svg class="social-icon" height="34" width="34">
+										<use href="./img/icons/symbol-defs.svg#icon-linkedin"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="social-contacts__item">
+								<a href="" class="social-contacts__link">
+									<svg class="social-icon" height="34" width="34">
+										<use href="./img/icons/symbol-defs.svg#icon-youtube"></use>
+									</svg>
+								</a>
+							</li>
+							<li class="social-contacts__item">
+								<a href="" class="social-contacts__link">
+									<svg class="social-icon" height="34" width="34">
+										<use href="./img/icons/symbol-defs.svg#icon-tiktok"></use>
+									</svg>
+								</a>
+							</li>
+						</ul>
+						<h4 class="contacts-footer__title">HEAD OFFICE</h4>
+						<address class="contacts-footer__address address-contacts">
+							<ul class="address-contacts__list">
+								<li class="address-contacts__item">
+									<a href="" class="address-contacts__link"
+										>500 Terry Francine St, San Francisco, CA 94158</a
+									>
+								</li>
+								<li class="address-contacts__item">
+									<a href="tel:1234567890" class="address-contacts__link"
+										>123-456-7890</a
+									>
+								</li>
+								<li class="address-contacts__item">
+									<a
+										href="maleto:info@mysite.com"
+										class="address-contacts__link"
+										>info@mysite.com</a
+									>
+								</li>
+							</ul>
+						</address>
+					</div>
+				</div>
+			</footer>
 		</div>
 		<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 		<script src="js/script.js"></script>
