--- a/index.html
+++ b/index.html
@@ -88,15 +88,50 @@
 									<use href="./img/icons/symbol-defs.svg#icon-arrow"></use></svg
 							></a>
 						</div>
-						<!-- <div class="project__slider">
-							<div class="swiper-container">
-								<div class="swiper-wrapper">
-									<div class="swiper-slide"></div>
+						<div class="project__slider">
+							<div class="slider-project swiper">
+								<div class="slider-project__wrapper swiper-wrapper">
+									<div class="slider-project__slide swiper-slide">
+										<div class="slider-project__image">
+											<img src="./img/projects/slide1.jpg" alt="slide1" />
+										</div>
+										<p class="slider-project__text">NOME</p>
+									</div>
+									<div class="slider-project__slide swiper-slide">
+										<div class="slider-project__image">
+											<img src="./img/projects/slide2.jpg" alt="slide2" />
+										</div>
+										<p class="slider-project__text">NOME</p>
+									</div>
+									<div class="slider-project__slide swiper-slide">
+										<div class="slider-project__image">
+											<img src="./img/projects/slide3.jpg" alt="slide3" />
+										</div>
+										<p class="slider-project__text">NOME</p>
+									</div>
+									<div class="slider-project__slide swiper-slide">
+										<div class="slider-project__image">
+											<img src="./img/projects/slide4.jpg" alt="slide4" />
+										</div>
+										<p class="slider-project__text">PEAK LOGISTICS CENTER</p>
+									</div>
+									<div class="slider-project__slide swiper-slide">
+										<div class="slider-project__image">
+											<img src="./img/projects/slide5.jpg" alt="slide5" />
+										</div>
+										<p class="slider-project__text">BROOKLINE WATER LINE</p>
+									</div>
+									<div class="slider-project__slide swiper-slide">
+										<div class="slider-project__image">
+											<img src="./img/projects/slide6.jpg" alt="slide6" />
+										</div>
+										<p class="slider-project__text">SILVER CREST DAM</p>
+									</div>
 								</div>
+								<div class="swiper-button-next"></div>
 								<div class="swiper-button-prev"></div>
-								<div class="swiper-slider-next"></div>
 							</div>
-						</div> -->
+						</div>
 					</div>
 				</section>
 				<section class="page__services services">
