--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 					<nav class="header__menu menu">
 						<div class="menu__body">
 							<ul class="menu__list">
-								<li class="menu__item">
-									<a href="#Home" class="menu__link">HOME</a>
+								<li class="menu__item active__page">
+									<a href="#home" class="menu__link">HOME</a>
 								</li>
 								<li class="menu__item">
-									<a href="#Home" class="menu__link">CHI SIAMO</a>
+									<a href="./chi-siamo.html" class="menu__link">CHI SIAMO</a>
 								</li>
 								<li class="menu__item">
 									<a href="./servici.html" class="menu__link">SERVIZI</a>
@@ -46,7 +46,7 @@
 				</div>
 			</header>
 			<main class="page">
-				<section class="page__testo testo">
+				<section class="page__testo testo" id="home">
 					<div class="testo__container">
 						<div class="testo__body">
 							<h1 class="testo__title">TESTO</h1>
@@ -217,10 +217,14 @@
 							<div class="menu-footer__body">
 								<ul class="menu-footer__list">
 									<li class="menu-footer__item">
-										<a href="#Home" class="menu-footer__link">HOME</a>
+										<a href="#home" class="menu-footer__link active__page"
+											>HOME</a
+										>
 									</li>
 									<li class="menu-footer__item">
-										<a href="#Home" class="menu-footer__link">CHI SIAMO</a>
+										<a href="./chi-siamo.html" class="menu-footer__link"
+											>CHI SIAMO</a
+										>
 									</li>
 									<li class="menu-footer__item">
 										<a href="./servici.html" class="menu-footer__link"
