Update and add new sections

--- a/index.html
+++ b/index.html
@@ -32,10 +32,14 @@
 									<a href="./servici.html" class="menu__link">SERVIZI</a>
 								</li>
 								<li class="menu__item">
-									<a href="#Home" class="menu__link">SOSTENIBILITA'</a>
+									<a href="./sostenibilita.html" class="menu__link"
+										>SOSTENIBILITA'</a
+									>
 								</li>
 								<li class="menu__item">
-									<a href="#Home" class="menu__link">CONTATTACI</a>
+									<a href="./servici.html#contattaci" class="menu__link"
+										>CONTATTACI</a
+									>
 								</li>
 							</ul>
 						</div>
@@ -91,39 +95,97 @@
 						<div class="project__slider">
 							<div class="slider-project swiper">
 								<div class="slider-project__wrapper swiper-wrapper">
+									<!-- 1 -->
 									<div class="slider-project__slide swiper-slide">
 										<div class="slider-project__image">
 											<img src="./img/projects/slide1.jpg" alt="slide1" />
+											<div class="item-gallery__description">
+												<p class="description-item__title">NOME</p>
+												<p class="description-item__text">DESCRIZIONE</p>
+											</div>
 										</div>
 										<p class="slider-project__text">NOME</p>
 									</div>
+									<!-- 2 -->
 									<div class="slider-project__slide swiper-slide">
 										<div class="slider-project__image">
 											<img src="./img/projects/slide2.jpg" alt="slide2" />
+											<div class="item-gallery__description">
+												<p class="description-item__title">NOME</p>
+												<p class="description-item__text">DESCRIZIONE</p>
+											</div>
 										</div>
 										<p class="slider-project__text">NOME</p>
 									</div>
+									<!-- 3 -->
 									<div class="slider-project__slide swiper-slide">
 										<div class="slider-project__image">
 											<img src="./img/projects/slide3.jpg" alt="slide3" />
+											<div class="item-gallery__description">
+												<p class="description-item__title">NOME</p>
+												<p class="description-item__text">
+													This is the space to introduce the Project section.
+													Take this opportunity to give visitors a brief
+													overview of the types of projects they'll find
+													featured in the showcase below. Consider adding an
+													image or video to spark their interest.
+												</p>
+											</div>
 										</div>
 										<p class="slider-project__text">NOME</p>
 									</div>
+									<!-- 4 -->
 									<div class="slider-project__slide swiper-slide">
 										<div class="slider-project__image">
 											<img src="./img/projects/slide4.jpg" alt="slide4" />
+											<div class="item-gallery__description">
+												<p class="description-item__title">
+													PEAK LOGISTICS CENTER
+												</p>
+												<p class="description-item__text">
+													This is the space to introduce the Project section.
+													Take this opportunity to give visitors a brief
+													overview of the types of projects they'll find
+													featured in the showcase below. Consider adding an
+													image or video to spark their interest.
+												</p>
+											</div>
 										</div>
 										<p class="slider-project__text">PEAK LOGISTICS CENTER</p>
 									</div>
+									<!-- 5 -->
 									<div class="slider-project__slide swiper-slide">
 										<div class="slider-project__image">
 											<img src="./img/projects/slide5.jpg" alt="slide5" />
+											<div class="item-gallery__description">
+												<p class="description-item__title">
+													BROOKLINE WATER LINE
+												</p>
+												<p class="description-item__text">
+													This is the space to introduce the Project section.
+													Take this opportunity to give visitors a brief
+													overview of the types of projects they'll find
+													featured in the showcase below. Consider adding an
+													image or video to spark their interest.
+												</p>
+											</div>
 										</div>
 										<p class="slider-project__text">BROOKLINE WATER LINE</p>
 									</div>
+									<!-- 6 -->
 									<div class="slider-project__slide swiper-slide">
 										<div class="slider-project__image">
 											<img src="./img/projects/slide6.jpg" alt="slide6" />
+											<div class="item-gallery__description">
+												<p class="description-item__title">SILVER CREST DAM</p>
+												<p class="description-item__text">
+													This is the space to introduce the Project section.
+													Take this opportunity to give visitors a brief
+													overview of the types of projects they'll find
+													featured in the showcase below. Consider adding an
+													image or video to spark their interest.
+												</p>
+											</div>
 										</div>
 										<p class="slider-project__text">SILVER CREST DAM</p>
 									</div>
@@ -232,10 +294,16 @@
 										>
 									</li>
 									<li class="menu-footer__item">
-										<a href="#Home" class="menu-footer__link">SOSTENIBILITA'</a>
+										<a href="./sostenibilita.html" class="menu-footer__link"
+											>SOSTENIBILITA'</a
+										>
 									</li>
 									<li class="menu-footer__item">
-										<a href="#Home" class="menu-footer__link">CONTATTACI</a>
+										<a
+											href="./servici.html#contattaci"
+											class="menu-footer__link"
+											>CONTATTACI</a
+										>
 									</li>
 								</ul>
 							</div>
