--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -28,12 +28,16 @@
 									>
 								</li>
 								<li class="menu__item menu__item-chi">
-									<a href="#Home" class="menu__link menu__link-chi"
+									<a
+										href="./sostenibilita.html"
+										class="menu__link menu__link-chi"
 										>SOSTENIBILITA'</a
 									>
 								</li>
 								<li class="menu__item menu__item-chi">
-									<a href="#Home" class="menu__link menu__link-chi"
+									<a
+										href="./servici.html#contattaci"
+										class="menu__link menu__link-chi"
 										>CONTATTACI</a
 									>
 								</li>
@@ -149,10 +153,16 @@
 										>
 									</li>
 									<li class="menu-footer__item">
-										<a href="#Home" class="menu-footer__link">SOSTENIBILITA'</a>
+										<a href="./sostenibilita.html" class="menu-footer__link"
+											>SOSTENIBILITA'</a
+										>
 									</li>
 									<li class="menu-footer__item">
-										<a href="#Home" class="menu-footer__link">CONTATTACI</a>
+										<a
+											href="./servici.html#contattaci"
+											class="menu-footer__link"
+											>CONTATTACI</a
+										>
 									</li>
 								</ul>
 							</div>
