--- a/servici.html
+++ b/servici.html
@@ -395,6 +395,66 @@
 					</div>
 				</div>
 			</section>
+			<section class="page__user-contacts" id="contattaci">
+				<div class="user-contacts__container">
+					<form action="#" class="user-contacts__form">
+						<h3 class="form__title">Contattaci</h3>
+						<div class="form__info-user info-user-form">
+							<div class="info-user-form__item">
+								<label for="formName" class="form__label">First name</label>
+								<input
+									id="formName"
+									type="text"
+									name="name"
+									class="form__input"
+									placeholder="First name"
+								/>
+							</div>
+							<div class="info-user-form__item">
+								<label for="formLastName" class="form__label">Last name</label>
+								<input
+									id="formLastName"
+									type="text"
+									name="last-name"
+									class="form__input"
+									placeholder="Last name"
+								/>
+							</div>
+							<div class="info-user-form__item">
+								<label for="formEmail" class="form__label">Email*</label>
+								<input
+									id="formEmail"
+									type="email"
+									name="email"
+									class="form__input"
+									placeholder="Email"
+									required
+								/>
+							</div>
+							<div class="info-user-form__item">
+								<label for="formPhone" class="form__label">Phone</label>
+								<input
+									id="formPhone"
+									type="text"
+									name="phone"
+									class="form__input"
+									placeholder="Phone"
+								/>
+							</div>
+						</div>
+						<div class="info-user-form__item">
+							<label for="formMessage" class="form__label">Message*</label>
+							<textarea
+								name="message"
+								id="formMessage"
+								class="form__message"
+								required
+							></textarea>
+						</div>
+						<button type="submit" class="form__button">Submit</button>
+					</form>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
